--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".RecipeActivity">
 
+    <!-- 하단 네비게이션 바 -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/recipe_toolbar"
         android:layout_width="match_parent"
@@ -25,17 +26,383 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="65dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:text="아이콘"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <HorizontalScrollView
         android:id="@+id/recyclerview_recipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_toolbar"
+        android:layout_height="40dp"
         android:layout_above="@id/recipe_bottom_navi_menu"
-        />
+        android:layout_below="@id/recipe_toolbar"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="565dp"
+        android:layout_weight="1">
 
-    <!-- 하단 네비게이션 바 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/entire_button"
+                android:layout_width="75dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="전체"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/kimchi_button"
+                android:layout_width="75dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="김치"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/egg_button"
+                android:layout_width="75dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="계란"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/meat_button"
+                android:layout_width="75dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="돼지고기"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/meat_button"
+                android:layout_width="75dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="돼지고기"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+
+            <Button
+                android:id="@+id/meat_button"
+                android:layout_width="72dp"
+                android:layout_height="43dp"
+                android:layout_weight="1"
+                android:background="@drawable/edit_profile_rounded"
+                android:text="돼지고기"
+                android:textColor="#00BCD4"
+                android:textSize="12dp" />
+        </LinearLayout>
+    </HorizontalScrollView>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="562dp"
+        android:layout_marginTop="97dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <!--        app:layout_constraintTop_toBottomOf="@+id/button">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/profile_bottom_navi_menu"
+            android:layout_below="@id/profile_toolbar"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="15dp"
+                    android:background="@null"
+                    android:text="총 000개의 레시피"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="394dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/Tuna_Kimchi_Fried_Rice" />
+
+                <EditText
+                    android:layout_width="260dp"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:text="참치깍두기 볶음밥\n4인분 60분 이내" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:background="@null"
+                    android:text="아이콘" />
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/recipe_bottom_navi_menu"
         android:layout_width="match_parent"
