--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="나의 냉털을 부탁해!"
+            android:text="재료 선택"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="602dp"
+        android:layout_height="663dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -76,48 +76,44 @@
             android:id="@+id/button2"
             android:layout_width="264dp"
             android:layout_height="61dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_radius_edge_image"
             android:backgroundTint="#6DA2CA"
-            android:text="사진 찍기" />
+            android:text="사진 찍기"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="264dp"
             android:layout_height="60dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_radius_edge_image"
             android:backgroundTint="#6DA2CA"
-            android:text="사진 불러오기" />
-
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="155dp"
-            android:layout_marginTop="10dp"
-            android:text="닉네임 *" />
+            android:text="사진 불러오기"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
 
         <RadioGroup
-            android:id="@+id/genderGroup"
-            android:layout_width="280dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal" />
+            android:layout_width="345dp"
+            android:layout_height="237dp">
 
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            <RadioGroup
+                android:id="@+id/genderGroup"
+                android:layout_width="280dp"
+                android:layout_height="23dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="360dp"
+                android:layout_height="198dp"
+                tools:srcCompat="@drawable/no_image" />
+        </RadioGroup>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="#6DA2CA"
-        android:text="나의 냉장고에 저장"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:textStyle="bold" />
 </LinearLayout>
