--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,21 +25,22 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/edit_profile"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
-            android:layout_gravity="end"
-            android:text="수정"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+<!--        <Button-->
+<!--            android:id="@+id/edit_profile"-->
+<!--            android:layout_width="70dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_gravity="end"-->
+<!--            android:text="수정"-->
+<!--            android:textColor="@android:color/black"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="603dp"
         android:layout_marginTop="56dp"
+        android:layout_above="@id/profile_bottom_navi_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <!--        app:layout_constraintTop_toBottomOf="@+id/button">-->
