--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -32,8 +32,8 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="0dp"
-        android:layout_below="@id/recipe_toolbar">
+        android:layout_below="@id/recipe_toolbar"
+        android:layout_marginTop="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,7 +42,7 @@
 
             <Button
                 android:id="@+id/entire_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
@@ -53,7 +53,7 @@
 
             <Button
                 android:id="@+id/kimchi_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
@@ -64,7 +64,7 @@
 
             <Button
                 android:id="@+id/egg_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
@@ -75,7 +75,7 @@
 
             <Button
                 android:id="@+id/pork_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
@@ -86,7 +86,7 @@
 
             <Button
                 android:id="@+id/cow_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
@@ -98,7 +98,7 @@
 
             <Button
                 android:id="@+id/dog_button"
-                android:layout_width="70dp"
+                android:layout_width="90dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="9dp"
