--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -39,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="603dp"
         android:layout_marginTop="56dp"
+        android:layout_above="@id/profile_bottom_navi_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <!--        app:layout_constraintTop_toBottomOf="@+id/button">-->
