--- a/app/src/main/res/layout/fragment_fresh_basket.xml
+++ b/app/src/main/res/layout/fragment_fresh_basket.xml
@@ -3,10 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FreshBasketFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_fresh_basket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/recomendrecipe_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_radius_whole"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:text="추천레시피 보러가기"
+        android:visibility="gone"/>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/recipe_floatingbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/MaterialTheme"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:contentDescription="fab_contrent_desc"
+        android:text="추천레시피 보러가기"
+        app:backgroundTint="#c3d9ee"
+        android:visibility="gone"/>
 </RelativeLayout>
